--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
 <script>eruda.init();</script>
 
 
-<script type="module" src="./mode/python/python.js"></script>
-
-<script type="module" src="./main.js"></script>
-
-<link rel="stylesheet" href="./resetStyle/reboot.css">
-<link rel="stylesheet" href="./lib/codemirror.css">
-<link rel="stylesheet" href="./style.css">
+<link rel="stylesheet" href="./myStyles/reboot.css">
+<link rel="stylesheet" href="./myStyles/style.css">
 </head>
 <body>
 ほげ
+<h1>ふが</h1>
 </body>
 </html>
