--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
 <script src="https://cdn.jsdelivr.net/npm/eruda@2.3.3/eruda.min.js"></script>
 <script>eruda.init();</script>
 
+<!-- /* CodeMirror Script -->
+<script type="module" src="./mode/python/python.js"></script>
+<script type="module" src="./main.js"></script>
+
+<!-- CodeMirror Script */ -->
 
 <link rel="stylesheet" href="./myStyles/reboot.css">
+<link rel="stylesheet" href="./lib/codemirror.css">
 <link rel="stylesheet" href="./myStyles/style.css">
 </head>
 <body>
